--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>digital-rewards-phone-magic</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Digitiseone Solutions</title>
+    <link rel="icon" href="favicon.png" />
+    <meta name="description" content="Digitiseone Solutions" />
+    <meta name="author" content="Digitiseone Solutions" />
 
-    <meta property="og:title" content="digital-rewards-phone-magic" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Digitiseone Solutions" />
+    <meta property="og:description" content="Digitiseone Solutions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
